# reach

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  mypy.ini  pyproject.toml  reach.py  readthedocs.yaml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: api.rst
reach/: __init__.py  autoreach.py  reach.py  version.py
reach/legacy/: load.py
tests/: test_auto.py  test_init.py  test_io.py  test_load.py  test_similarity.py  test_vectorize.py
