[tool.poetry]
name = "reach"
version = "4.0.0"
description = "A light-weight package for working with pre-trained word embeddings"
authors = ["Stéphan Tulkens"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
tqdm = "*"
pyahocorasick = "*"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
